tdf#101022 Export Greek symbol to MathML with correct mathvariant

In StarMath notation "{ital %GAMMA}" is recognized as italic, and
"{nitalic %iGAMMA}" is non-italic. That is, the ital/nitalic directive
takes priority over special characters' flavor.
On the other hand, in MathML a mathvariant attribute given in <mi>
overwrites inherited value.

This does not handle "bold-italic" case etc. yet.

Change-Id: I9c72dc4472f8cec553417d516d9d82aebd43d15c
Reviewed-on: https://gerrit.libreoffice.org/27604
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>